--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="author" content="DSX,工科男表白,浪漫表白,表白网站">
-	<meta name="description" content="这是XXX为XXX表白制作的表白网站">
+	<meta name="description" content="这是LSD为HHY表白制作的表白网站">
 	<title>XXX LOVE XXX</title>
 	<link rel="stylesheet" href="all.min.css" >
 </head>
@@ -27,46 +27,46 @@
 	<div class="flowtime">
 		<div class="ft-section section-1" data-id="section-1">
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
-				<p class="text1"><span id="text-75" contenteditable="true">XX</span> ❤ <span id="text-76" contenteditable="true">XX</span> <span id="text-77" contenteditable="true">一生一世</span></p>
-				<p class="text2">按键盘 "↓" <span id="text-78" contenteditable="true">开始倾听工科男的浪漫表白</span></p>
+				<p class="text1"><span id="text-75" contenteditable="true">李顺东</span> ❤ <span id="text-76" contenteditable="true">黄慧祎</span> <span id="text-77" contenteditable="true"></span></p>
+				<p class="text2">按键盘 "↓" 和 F11 以及右下角的♫ <span id="text-78" contenteditable="true">开始倾听你东哥的浪漫表白</span></p>
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
-				<p class="top-text" id="text-1" contenteditable="true">过去的XX一直是一个人生活，享受着孤独，也憧憬着爱情。</p>
-				<img src="img/iali63.jpg" tppabs="img/iali63.jpg"  alt="过去的XX一直是一个人生活，享受着孤独，也憧憬着爱情。" />
+				<p class="top-text" id="text-1" contenteditable="true">过去的我一直是一个人生活，享受着孤独，也憧憬着爱情。</p>
+				<img src="img/me.jpg" tppabs="img/me.jpg"  alt="过去的XX一直是一个人生活，享受着孤独，也憧憬着爱情。" />
 			</div>
 			<div id="/section-1/page-3" class="ft-page page-3 left-img" data-id="page-3">
-				<h2 class="text" id="text-2" contenteditable="true">一个人的长廊</h2>
-				<img src="img/iali35.jpg" tppabs="img/iali35.jpg"  alt="一个人的长廊"/>
+				<h2 class="text" id="text-2" contenteditable="true">一个人的旅游</h2>
+				<img src="img/daocheng.jpg" tppabs="img/daocheng.jpg"  alt="一个人旅游"/>
 			</div>
 			<div id="/section-1/page-4" class="ft-page page-4 full-img" data-id="page-4">
-				<h2 class="center-text" id="text-3" contenteditable="true">一个人的山岗</h2>
-				<img src="img/iali6.jpg" tppabs="img/iali6.jpg"  alt="一个人的山岗" />
+				<h2 class="center-text" id="text-3" contenteditable="true" >一个人看蓝天</h2>
+				<img src="img/blueSky.jpg" tppabs="img/blueSky.jpg"  alt="一个人看蓝天" />
 			</div>
 		</div>
 		<div class="ft-section section-2" data-id="section-2">
 			<div id="/section-2/page-1" class="ft-page page-5 full-img" data-id="page-1">
-				<h2 class="center-text" id="text-4" contenteditable="true">一个人的地铁</h2>
-				<img src="img/iali19.jpg" tppabs="img/iali19.jpg"  alt="一个人的地铁" />
+				<h2 class="center-text" id="text-4" contenteditable="true">看日落</h2>
+				<img src="img/sunset.jpg" tppabs="img/sunset.jpg"  alt="看日落" />
 			</div>
-			<div id="/section-2/page-2" class="ft-page page-6" data-id="page-2">
-				<h2 class="center-text" id="text-5" contenteditable="true">一个人的游乐场</h2>
-				<img src="img/iali29.jpg" tppabs="img/iali29.jpg" alt="一个人的游乐场"/>
+			<div id="/section-2/page-2" class="ft-page page-6 " data-id="page-2">
+				<h2 class="center-text" id="text-5" contenteditable="true">看花与月</h2>
+				<img src="img/flowa.jpg" tppabs="img/flowa.jpg" alt="看花与月"/>
 			</div>
-			<div id="/section-2/page-3" class="ft-page page-7" data-id="page-3">
+			<div id="/section-2/page-3" class="ft-page page-5 full-img" data-id="page-3">
 				<h3 id="text-6" contenteditable="true">但他依然乐观，微笑着，等待着</h3>
-				<img src="img/iali60.jpg" tppabs="img/iali60.jpg"  alt="但他依然乐观，微笑着，等待着"/>
+				<img src="img/StarrySky.jpg" tppabs="img/StarrySky.jpg"  alt="但他依然乐观，微笑着，等待着"/>
 			</div>
 			<div id="/section-2/page-4" class="ft-page page-8 full-img" data-id="page-4">
 				<h3 id="text-7" contenteditable="true">生活难免有风风雨雨</h3>
-				<img src="img/iali51.jpg" tppabs="img/iali51.jpg" alt="生活难免有风风雨雨" />
+				<img src="img/wind.jpg" tppabs="img/wind.jpg" alt="生活难免有风风雨雨" />
 			</div>
 			<div id="/section-2/page-5" class="ft-page page-9" data-id="page-5">
 				<h3 id="text-8" contenteditable="true">他总是能够轻松的应对</h3>
-				<img src="img/iali5.jpg" tppabs="img/iali5.jpg" />
+				<img src="img/easy.jpg" tppabs="img/easy.jpg" />
 			</div>
 			<div id="/section-2/page-6" class="ft-page page-10" data-id="page-6">
 				<h3 id="text-9" contenteditable="true">并且面带阳光、自信的笑容</h3>
-				<img src="img/iali22.jpg" tppabs="img/iali22.jpg" />
+				<img src="img/smile.jpg" tppabs="img/smile.jpg" />
 			</div>
 		</div>
 		<div class="ft-section section-3" data-id="section-3">
@@ -80,7 +80,7 @@
 			</div>
 			<div id="/section-3/page-3" class="ft-page page-13" data-id="page-3">
 				<img src="img/iali64.jpg" tppabs="img/iali64.jpg" alt='可是小明的爱情又在哪里呢？' />
-				<h3 id="text-13" contenteditable="true">可是XX的爱情又在哪里呢？</h3>
+				<h3 id="text-13" contenteditable="true">可是他的爱情又在哪里呢？</h3>
 			</div>
 			<div id="/section-3/page-4" class="ft-page page-14 left-img" data-id="page-4">
 				<h3 id="text-14" contenteditable="true">在镜子里面吗？他不敢相信</h3>
