--- a/index.htm
+++ b/index.htm
@@ -83,110 +83,110 @@
 				<h3 id="text-13" contenteditable="true">可是他的爱情又在哪里呢？</h3>
 			</div>
 			<div id="/section-3/page-4" class="ft-page page-14 left-img" data-id="page-4">
-				<h3 id="text-14" contenteditable="true">在镜子里面吗？他不敢相信</h3>
+				<h3 id="text-14" contenteditable="true">直到......</h3>
 				<img src="img/iali46.jpg" tppabs="img/iali46.jpg" />
 			</div>
 			<div id="/section-3/page-5" class="ft-page page-15 left-img" data-id="page-5">
-				<h3><span id="text-15" contenteditable="true">他去问大树，我的爱情在哪里？</span><br /><span id="text-16" contenteditable="true">大树告诉他，也许就在不远的地方</span></h3>
-				<img src="img/iali45.jpg" tppabs="img/iali45.jpg" />
+				<h3><span id="text-15" contenteditable="true">他</span><br /><span id="text-16" contenteditable="true">遇见了 她</span></h3>
+				<img src="img/change.jpg" tppabs="img/change.jpg" />
 			</div>
 			<div id="/section-3/page-6" class="ft-page page-16 left-img" data-id="page-6">
-				<h3><span id="text-17" contenteditable="true">于是，XX一个人继续向前走</span><br /><span id="text-18" contenteditable="true">走在茫茫的雪地上</span></h3>
-				<img src="img/iali66.jpg" tppabs="img/iali66.jpg" />
+				<h3><span id="text-17" contenteditable="true">于是,他的生活</span><br /><span id="text-18" contenteditable="true">慢慢发生了改变:</span></h3>
+				<img src="img/changMe.jpg" tppabs="img/changMe.jpg" />
 			</div>
 			<div id="/section-3/page-7" class="ft-page page-17 top-text" data-id="page-7">
-				<h3 id="text-19" contenteditable="true">直到有一天XX与XX相遇了</h3>
-				<img src="img/iali16.jpg" tppabs="img/iali16.jpg" />
+				<h3 id="text-19" contenteditable="true">第一次约会的地方</h3>
+				<img src="img/eatPlave.jpg" tppabs="img/eatPlave.jpg" />
 			</div>
 		</div>
 		<div class="ft-section section-4" data-id="section-4">
-			<div id="/section-4/page-1" class="ft-page page-18 full-img" data-id="page-1">
-				<p class="text" id="text-20" contenteditable="true">XX喜欢XX，非常非常的喜欢，因为XX的出现，XX脸上有了更加灿烂的笑容</p>
-				<img src="img/iali11.jpg" tppabs="img/iali11.jpg"  />
+			<div id="/section-4/page-1" class="ft-page page-18 " data-id="page-1">
+				<h3 class="text" id="text-20" contenteditable="true">我们是在这里吃的饭</h3>
+				<img src="img/eat.jpg" tppabs="img/eat.jpg"  />
 			</div>
 			<div id="/section-4/page-2" class="ft-page page-19" data-id="page-2">
-				<h3 id="text-21" contenteditable="true">可是XX会喜欢XX吗？</h3>
-				<img src="img/iali75.jpg" tppabs="img/iali75.jpg" />
+				<h3 id="text-21" contenteditable="true">给你拍了很多很多照片</h3>
+				<img src="img/she2.jpg" tppabs="img/she2.jpg" />
 			</div>
 			<div id="/section-4/page-3" class="ft-page page-20" data-id="page-3">
 				<img src="img/iali59.png" tppabs="img/iali59.png" />
-				<h3 id="text-22" contenteditable="true">XX想。。。</h3>
-				<img src="img/iali9.jpg" tppabs="img/iali9.jpg" />
+				<h3 id="text-22" contenteditable="true">当时天气很热 但还是拍了怎么多</h3>
+				<img src="img/she3.png" tppabs="img/iali9.jpg" />
 			</div>
 			<div id="/section-4/page-4" class="ft-page page-21" data-id="page-4">
-				<h3 id="text-23" contenteditable="true">XX想和XX在一起</h3>
-				<img src="img/iali59.png" tppabs="img/iali59.png" />
+				<h3 id="text-23" contenteditable="true">你穿的拖鞋也很好看</h3>
+				<img src="img/she4.png" tppabs="img/iali59.png" />
 			</div>
 			<div id="/section-4/page-5" class="ft-page page-22 left-img" data-id="page-5">
-				<h3 id="text-24" contenteditable="true">然后XX会经常去找XX</h3>
-				<img src="img/iali4.jpg" tppabs="img/iali4.jpg" />
+				<h3 id="text-24" contenteditable="true">Cute girl</h3>
+				<img src="img/she6.jpg" tppabs="img/iali4.jpg" />
 			</div>
 			<div id="/section-4/page-6" class="ft-page page-23 left-img" data-id="page-6">
-				<h3 id="text-25" contenteditable="true">然后两个人一起出去玩</h3>
-				<img src="img/iali44.jpg" tppabs="img/iali44.jpg" />
+				<h3 id="text-25" contenteditable="true">My Favoratite</h3>
+				<img src="img/best.jpg" tppabs="img/best.jpg" />
 			</div>
-			<div id="/section-4/page-7" class="ft-page page-24 full-img" data-id="page-7">	
-				<h3 id="text-26" contenteditable="true">晚上XX会把XX送回家</h3>
-				<img src="img/iali32.jpg" tppabs="img/iali32.jpg" />
+			<div id="/section-4/page-7" class="ft-page page-24 left-img" data-id="page-7">
+				<h3 id="text-26" contenteditable="true">我觉得 你的眼睛里面装着星辰大海</h3>
+				<img src="img/sea.jpg" tppabs="img/eye.jpg" />
 			</div>
 		</div>
 		<div class="ft-section section-5" data-id="section-5">
 			<div id="/section-5/page-1" class="ft-page page-25 left-img" data-id="page-1">
-				<h3><span id="text-27" contenteditable="true">直到很晚</span><br /><span id="text-28" contenteditable="true">XX再一个人回家</span></h3>
-				<img src="img/iali37.jpg" tppabs="img/iali37.jpg" />
+				<h3><span id="text-27" contenteditable="true">我还是觉得</span><br /><span id="text-28" contenteditable="true">直发的时候更好看 ( •̀ ω •́ )✧</span></h3>
+				<img src="img/back.jpg" tppabs="img/eye.jpg" />
 			</div>
 			<div id="/section-5/page-2" class="ft-page page-26 top-text" data-id="page-2">
-				<h3 id="text-29" contenteditable="true">然后高兴地进入梦乡，在梦中还会和XX在一起</h3>
-				<img src="img/iali10.gif" tppabs="img/iali10.gif" />
+				<h3 id="text-29" contenteditable="true">小仙女 冒着生命危险在路边拍照 </h3>
+				<img src="img/front.jpg" tppabs="img/iali10.gif" />
 			</div>
 			<div id="/section-5/page-3" class="ft-page page-27" data-id="page-3">
-				<h3 id="text-30" contenteditable="true">XX想成为了XX的逛街助手</h3>
-				<img src="img/iali67.jpg" tppabs="img/iali67.jpg"  />
+				<h3 id="text-30" contenteditable="true">然后去了为什么艺术空间</h3>
+				<img src="img/she8.jpg" tppabs="img/iali67.jpg"  />
 			</div>
 			<div id="/section-5/page-4" class="ft-page page-28" data-id="page-4">
-				<h3 id="text-31" contenteditable="true">然后，XX和XX一起去很多地方玩</h3>
-				<img src="img/iali40.jpg" tppabs="img/iali40.jpg" />
+				<h3 id="text-31" contenteditable="true">如果当时我站在你右侧 会看的到你的双下巴吗？(づ￣ 3￣)づ</h3>
+				<img src="img/she33.jpg" tppabs="img/she33.jpg" />
 			</div>
 			<div id="/section-5/page-5" class="ft-page page-29" data-id="page-5">
-				<h3 id="text-32" contenteditable="true">XX也想和XX一块成为一对吃货</h3>
-				<img src="img/iali12.jpg" tppabs="img/iali12.jpg" />
+				<h3 id="text-32" contenteditable="true">你说模糊的很好看,这个怎么样</h3>
+				<img src="img/she34.jpg" tppabs="img/iali12.jpg" />
 			</div>
 			<div id="/section-5/page-6" class="ft-page page-30" data-id="page-6">
-				<h3 id="text-33" contenteditable="true">再然后，他们会搬到了一起</h3>
+				<h3 id="text-33" contenteditable="true">那天结束后,你又说请了我去吃东西 可惜没有照片啦</h3>
 				<img src="img/iali76.gif" tppabs="img/iali76.gif" />
 			</div>
 			<div id="/section-5/page-7" class="ft-page page-31" data-id="page-7">
-				<h3 id="text-34" contenteditable="true">再然后，XX会开始学习她的技能</h3>
-				<img src="img/iali77.jpg" tppabs="img/iali77.jpg" />
+				<h3 id="text-34" contenteditable="true">第三次约会 我们去了成都当代影像馆</h3>
+				<img src="img/cd.jpg" tppabs="img/iali77.jpg" />
 			</div>
 		</div>
 		<div class="ft-section section-6" data-id="section-6">
 			<div id="/section-6/page-1" class="ft-page page-32" data-id="page-1">
-				<h3 id="text-35" contenteditable="true">煮饭</h3>
-				<img src="img/iali62.jpg" tppabs="img/iali62.jpg"  />
+				<h3 id="text-35" contenteditable="true">这张照片就值回票价了</h3>
+				<img src="img/watchBook.jpg" tppabs="img/iali62.jpg"  />
 			</div>
 			<div id="/section-6/page-2" class="ft-page page-33 top-text" data-id="page-2">
-				<h3 id="text-36" contenteditable="true">那时候，每天早上，他们吃着自己做的美食</h3>
-				<img src="img/iali3.jpg" tppabs="img/iali3.jpg" />
+				<h3 id="text-36" contenteditable="true">我选的地方都没啥人,对吧</h3>
+				<img src="img/darkWatcj.jpg" tppabs="img/iali3.jpg" />
 			</div>
 			<div id="/section-6/page-3" class="ft-page page-34 left-img" data-id="page-3">
-				<h3 id="text-37" contenteditable="true">然后在同一个站台，高高兴兴的一起上班</h3>
+				<h3 id="text-37" contenteditable="true">又是你的侧脸</h3>
 			</div>
 			<div id="/section-6/page-4" class="ft-page page-35" data-id="page-4">
-				<h3><span id="text-38" contenteditable="true">XX会感觉自己好幸福。</span><br /><span id="text-39" contenteditable="true">因为自己有了家</span><br /><span id="text-40" contenteditable="true">那个有XX在的地方</span></h3>
-				<img src="img/iali8.gif" tppabs="img/iali8.gif" />
+				<h3><span id="text-38" contenteditable="true">这张很有感觉 对哇</span></h3>
+				<img src="img/stand.jpg" tppabs="img/iali8.gif" />
 			</div>
-			<div id="/section-6/page-5" class="ft-page page-36 full-img" data-id="page-5">
-				<h3 id="text-41" contenteditable="true">他们可能偶尔也会吵架</h3>
-				<img src="img/iali31.jpg" tppabs="img/iali31.jpg" />
+			<div id="/section-6/page-5" class="ft-page page-36 " data-id="page-5">
+				<h3 id="text-41" contenteditable="true">后面你隔离了(っ °Д °;)っ</h3>
+				<img src="img/kouzhao.jpg" tppabs="img/iali31.jpg" />
 			</div>
 			<div id="/section-6/page-6" class="ft-page page-37 left-img" data-id="page-6">
-				<h3 id="text-42" contenteditable="true">XX不想这样</h3>
-				<img src="img/iali49.jpg" tppabs="img/iali49.jpg" />
+				<h3 id="text-42" contenteditable="true">我就化身为外卖小哥 为你送东西</h3>
+				<img src="img/iali29.jpg" tppabs="img/iali49.jpg" />
 			</div>
 			<div id="/section-6/page-7" class="ft-page page-38 bottom-text" data-id="page-7">
-				<img src="img/iali21.jpg" tppabs="img/iali21.jpg" />
-				<h3 id="text-43" contenteditable="true">一定是我有什么做的不对，XX会这么想</h3>
+				<img src="img/break.jpg" tppabs="img/iali21.jpg" />
+				<h3 id="text-43" contenteditable="true">如约而至的不止秋天 还有我</h3>
 			</div>
 		</div>
 		<div class="ft-section section-7" data-id="section-7">
